Closed Bug 99690 Opened 24 years ago Closed 24 years ago

Mozilla crashes when clicking on links in external apps

Categories

(SeaMonkey :: General, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla0.9.5

People

(Reporter: jst, Assigned: jst)

Details

(Whiteboard: [HAVE FIX])

Sometimes, not sure what the deal is, mozilla crashes when I click on links in my IRC client. Mozilla tries to load the url and crashes when accessing random memory in nsCommandLineService.cpp, here's a fix for the crash: Index: xpfe/appshell/src/nsCommandLineService.cpp =================================================================== RCS file: /cvsroot/mozilla/xpfe/appshell/src/nsCommandLineService.cpp,v retrieving revision 1.27 diff -u -r1.27 nsCommandLineService.cpp --- nsCommandLineService.cpp 2001/06/14 23:47:05 1.27 +++ nsCommandLineService.cpp 2001/09/14 22:30:29 @@ -50,7 +50,7 @@ mArgc = aArgc; mArgv = aArgv; //Insert the program name - if (aArgv[0]) + if (aArgc > 0 && aArgv[0]) { mArgList.AppendElement(NS_REINTERPRET_CAST(void*, nsCRT::strdup("-progname"))); mArgValueList.AppendElement(NS_REINTERPRET_CAST(void*, nsCRT::strdup(aArgv[0])));Index: xpfe/appshell/src/nsCommandLineService.cpp jag, r=? alecf, sr=?
Status: NEW → ASSIGNED
Whiteboard: [HAVE FIX]
Target Milestone: --- → mozilla0.9.5
sr=blake
r=bzbarsky
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.