Fix bug 99690. Fix crash when external apps try to open mozilla windows. r=bzbarsky@mit.edu, sr=blakeross@telocity.com